0.24

- Added missing test prereq for Test::Differences.

- Pages with many links to other pages ended up doing a lot of SQL queries
  (one per link). This has been refactored so that the pages for all links are
  fetched in one query, which should speed up HTML generation for pages with
  many links.


0.23  2010-09-28

- Whenever Silki generate URIs for email or redirects, it now makes sure to
  use the domain of the current request, rather than the default domain.


0.22  2010-09-28

- Added a config option, mod_rewrite_hack, to work around brain damage in
  Apache's mod_rewrite. Turn this on if some pages cannot be resolved when
  running with Apache+mod_rewrite as a frontend proxy.


0.21  2010-09-28

- Fixed the spam checking so it displays a useful error message to the
  submitter.

- Allow a wiki admin to skip spam checking when submitting a page.

- Improved formatting of preformatted text in a page.

- All external links now include a rel="nofollow" attribute to discourage
  spam.

- Make sure the temp dir exists before trying to use it.


0.20  2010-09-17

- Added a "forgot my password" feature.

- Restyled forms so that labels are above fields, rather than to the left.


0.19  2010-09-12

- Errors during an import were not detected properly.

- Import broke if any of the users being imported had an openid_uri.

- Fix bad image URIs for import & export page.


0.18  2010-09-12

- Purging a revision sometimes failed with a SQL error. Now this always works
  (but is slower, sigh.)


0.17  2010-09-12

- When editing a page, there is now a live preview shown below the edit form.


0.16  2010-09-07

- More layout changes. When viewing a page, tags and incoming links are on the
  far right, rather than in their own column. Search has been moved to the top
  of the page.

- The list of active users on the wiki dashboard is now sorted by the most
  recent edit of each user, and it displays the datetime of their most recent
  edit as well.


0.15  2010-09-05
